fix mathjax scrollbar

--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -233,12 +233,6 @@
 }
 
 
-.MathJax[display="true"] {
-    overflow: auto;
-    padding: 0.75em 0.5em;
-}
-
-
 .highlight.flexitem {
     overflow-y: hidden;
 }
